# EVA

./: .env.example  CMakeLists.txt  Cargo.toml  ENHANCED_CHAT_COMPLETE.md  EVOLUTIONARY_EXPANSION_COMPLETE.md  MULTI_LANGUAGE_INTEGRATION_COMPLETE.md  OPENAI_INTEGRATION_COMPLETE.md  index.html  package-lock.json  package.json  requirements.txt  test_eva_system.js  validation_report.md  vite.config.js.timestamp-1759752453832-d619771fe63c48.mjs
public/: manifest.json  sw.js
src/: main.js
src/components/: ChatPage.js  EVAInterface.js
src/core/: EVACore.js
src/core/actions/: ActionsModule.js
src/core/ai/: OpenAIService.js
src/core/backup/: BackupBrain.js
src/core/commands/: CommandProcessor.js
src/core/communication/: CommunicationHub.js
src/core/config/: ConfigurationManager.js
src/core/context/: ConversationContextManager.js
src/core/database/: PersonalDatabase.js
src/core/decision/: DecisionMakingModule.js
src/core/error/: ErrorHandlingManager.js
src/core/ethics/: EthicsModule.js
src/core/knowledge/: FoundationalLearning.js  KnowledgeFusionEngine.js  KnowledgeMiner.js  OfflineKnowledge.js
src/core/language/: LanguageBridge.js
src/core/learning/: LearningSystem.js
src/core/lease/: LeaseManager.js
src/core/memory/: MemorySystem.js
src/core/network/: NetworkIntelligence.js
src/core/personality/: PersonalityEngine.js
src/core/policy/: PolicyEngine.js
src/core/responses/: ResponsesModule.js
src/cpp/: eva_core.cpp
src/python/: eva_core.py
src/styles/: chat.css  main.css
src/tests/: evolutionary-test.js  multi-language-test.js
(+7 files in other folders)
