[package]
name = "eva-core"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.9"
prost = "0.11"
rayon = "1.7"
ndarray = "0.15"
candle = "0.3"
redis = "0.23"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.9"